{
    "version": 1,
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "4f0b7268-9e81-4264-9780-979447377e4f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "5b5af011-8fd4-4485-8dc1-9f2a65a82279",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8ca943e8-a211-45d1-a516-d7ff48fccb14",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "833e406f-4e95-40e6-a6d0-a9d3eacc6ea7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "048ddbf4-1322-47f7-969a-492483c41fa7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c00feead-c3cc-4c0d-b8f2-7feaa1dccb85",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "f1973e88-0dfc-4d24-acc7-c365fe98bcd9",
            "actions": [
                {
                    "name": "OpenWheel",
                    "type": "Button",
                    "id": "83fed2f0-3829-449d-ad30-c678b593fc04",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddItem",
                    "type": "Button",
                    "id": "185c1c72-99d1-42a5-a173-ce2a1adc0054",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e12003ae-ac6f-4fb1-8679-b601eb01e9e8",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bdd4e163-ee04-4fdd-8417-d9056a12a9ff",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}